[package]
name = "dtnclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dtn7 = "0.18.2"
tui = "0.19"
hex = "0.4.3"
crossterm = "0.25"
serde =  "1.0.152"
serde_json = "1.0.94"
serde_derive = "1.0.154"
unicode-width = "0.1.5"